--- a/3_landscapes.Rmd
+++ b/3_landscapes.Rmd
@@ -20,6 +20,7 @@ library(ggrepel)
 library(patchwork)
 library(dplyr)
 library(tidyr)
+library(countrycode)
 
 set.seed(123)
 
@@ -34,11 +35,10 @@ theme_set(theme_bw() + theme(axis.title=element_text(size=11, color='black'),
 ### Set constants
 ```{r}
 in_dir <- "./data"
-out_dir <- "./output"
 
 names(countries) <- countries <- c("CZ","DE","ES","FR","HU","IT","NL","SE","GB")
 udims <- c('econ','cult','populism')
-countries.lab <- countrycode::countrycode(countries, 'iso2c', 'country.name')
+countries.lab <- countrycode(countries, 'iso2c', 'country.name')
 names(countries.lab) <- countries
 countries.lab['GB'] <- 'England'
 countries.lab <- sort(countries.lab)
@@ -47,7 +47,7 @@ countries.lab <- sort(countries.lab)
 ### Load the data
 
 ```{r}
-loaded <- load(file= file.path(in_dir, "data_for_vcp_EVES2.RData"))
+loaded <- load(file= file.path(in_dir, "data_for_vcp.RData"))
 ```
 
 ### Check against published party-level populism scales
