--- a/6_vote_model_interpretation.Rmd
+++ b/6_vote_model_interpretation.Rmd
@@ -20,6 +20,7 @@ library(ggrepel)
 library(patchwork)
 library(dplyr)
 library(tidyr)
+library(countrycode)
 
 theme_set(theme_bw() + theme(axis.title=element_text(size=12), strip.text=element_text(size=12),
                              axis.text=element_text(size=11), legend.text=element_text(size=11)))
@@ -36,7 +37,7 @@ outdir <- "./output"
 countries <- c("CZ","DE","ES","FR","HU","IT","NL","SE","GB")
 names(countries) <- countries
 
-countries.lab <- countrycode::countrycode(countries, 'iso2c', 'country.name')
+countries.lab <- countrycode(countries, 'iso2c', 'country.name')
 names(countries.lab) <- countries
 countries.lab['GB'] <- 'England'
 countries.lab <- sort(countries.lab)
@@ -50,7 +51,7 @@ Rcpp::sourceCpp("src/misc.cpp")
 
 Load data and estimates
 ```{r}
-loaded <-  load(file.path(in_dir, "data_for_vcp_EVES2.RData"))
+loaded <-  load(file.path(in_dir, "data_for_vcp.RData"))
 est <- readRDS(file.path(outdir, "estimates_w_intercepts_r.rds"))
 ```
  
