--- a/6_vote_model_interpretation.Rmd
+++ b/6_vote_model_interpretation.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Load the necessary packages and set options
 
-```{r prep, include=FALSE} 
+```{r prep} 
 library(ggplot2)
 library(Rcpp)
 library(ggrepel)
